# logger

./: .gitignore  CMakeLists.txt  Common.hpp  ConsoleLoggerWriter.hpp  Doxyfile  LICENSE  LogLevels.hpp  LoggerWriter.hpp  README.md  SimpleLogger.hpp  StreamLoggerWriter.hpp  logger.code-workspace  main.cpp
doc/html/: annotated.html  classes.html  dir_47e3a9897695200b9cdda333cc31187d.html  dir_47e3a9897695200b9cdda333cc31187d_dep.map  dir_47e3a9897695200b9cdda333cc31187d_dep.md5  dir_4978baddb736738bdbb5f2bf4c1b02e9.html  dir_4978baddb736738bdbb5f2bf4c1b02e9_dep.map  dir_4978baddb736738bdbb5f2bf4c1b02e9_dep.md5  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_59425e443f801f1f2fd8bbe4959a3ccf.html  dir_63772b626f2709090f0bdca0f40827b4.html  dir_63772b626f2709090f0bdca0f40827b4_dep.map  dir_63772b626f2709090f0bdca0f40827b4_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_7197a457ec5b8deec3c03bd0801f4180.html  dir_7197a457ec5b8deec3c03bd0801f4180_dep.map  dir_7197a457ec5b8deec3c03bd0801f4180_dep.md5  dir_ba1abd46268ae76c565e1cff217d411f.html  dir_ba1abd46268ae76c565e1cff217d411f_dep.map  dir_ba1abd46268ae76c565e1cff217d411f_dep.md5  dir_bf91199e63f47c1d7ef4344b8c8c399e.html  dir_bf91199e63f47c1d7ef4344b8c8c399e_dep.map  dir_bf91199e63f47c1d7ef4344b8c8c399e_dep.md5  dir_dfecf55c8b0735f1f538e0a071055830.html  dir_dfecf55c8b0735f1f538e0a071055830_dep.map  dir_dfecf55c8b0735f1f538e0a071055830_dep.md5  dir_e74428771792c83bac1b949a2e16d5b5.html  dir_e74428771792c83bac1b949a2e16d5b5_dep.map  dir_e74428771792c83bac1b949a2e16d5b5_dep.md5  dir_eaebbde6bfda89fee2dfba2dbb09aaf4.html  dir_eaebbde6bfda89fee2dfba2dbb09aaf4_dep.map  (+17 more)
src/: ConsoleLoggerWriter.cpp  SimpleLogger.cpp  StreamLoggerWriter.cpp
tests/: unitTests.cpp
(+64 files in other folders)
